# FreemodeIdentity

./: .editorconfig  .gitignore  AGENTS.md  AppearanceData.cs  DecorationBaseFinder.cs  DecorationBaseScan.cs  Earning.cs  FacialMoods.cs  FreemodeIdentity.cs  FreemodeIdentity.csproj  GameBuild.cs  Identity.cs  Joaat.cs  LICENSE  Loadout.cs  Makefile  MemScan.cs  MoodMemory.cs  MovingStyleMemory.cs  MovingStyles.cs  PedAppearance.cs  PedDecorationMemory.cs  PedHeadBlendMemory.cs  README.md  ScriptPaths.cs  ShimBridge.cs  SkillProgress.cs  Skills.cs  Spoof.cs  StoryLook.cs  Wallet.cs  WaypointKeeper.cs  XmlAppearanceStorage.cs  packages.config
.github/workflows/: ci.yml  release.yml
Properties/: AssemblyInfo.cs
native/: CMakeLists.txt
native/src/: dllmain.cpp  logger.cpp  logger.hpp  natives.cpp  natives.hpp  pattern.cpp  pattern.hpp  rage.hpp  shared_state.hpp  stats.cpp  stats.hpp  wallet_hook.cpp  wallet_hook.hpp  waypoint.cpp  waypoint.hpp
scripts/: fetch-deps.ps1  set-version.ps1
